syntax = "proto3";

package grpc_template;

message RpcTemplateRequest {
    repeated int32 items = 1;
}

message RpcTemplateResponse {
    int32 result = 1;
}